basic api and site are built and working

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "@capacitor/android": "^7.4.3",
     "@capacitor/core": "^7.4.3",
     "@capacitor/ios": "^7.4.3",
+    "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
-    "vue": "^3.5.18"
+    "vue": "^3.5.18",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@capacitor/cli": "^7.4.3",
