--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,11 +20,12 @@
     "@vueuse/integrations": "^13.9.0",
     "@vueuse/motion": "^3.0.3",
     "axios": "^1.12.2",
+    "interact.js": "1.2.8",
+    "pinia": "^3.0.3",
     "universal-cookie": "^8.0.1",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
-    "vue3-interactjs": "^1.0.4",
-    "interact.js": "1.2.8"
+    "vue3-interactjs": "^1.0.4"
   },
   "devDependencies": {
     "@capacitor/cli": "^7.4.3",
