--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@vueuse/motion": "^3.0.3",
     "axios": "^1.12.2",
     "interact.js": "1.2.8",
+    "js-cookie": "^3.0.5",
     "pinia": "^3.0.3",
     "universal-cookie": "^8.0.1",
     "vue": "^3.5.18",
