--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.2",
+    "passport": "^0.7.0",
+    "passport-microsoft": "^2.1.0",
     "winston": "^3.18.1"
   },
   "devDependencies": {
@@ -28,6 +30,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.5.2",
+    "@types/passport": "^1.0.17",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
