--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,45 @@
 version: "3.8"
+
 services:
   mongo:
     image: mongo:4
     restart: always
     environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: mongo01
-      MONGO_INITDB_DATABASE: testdb
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME:-root}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD:-mongo01}
+      MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE:-testdb}
     volumes:
       - mongo_data:/data/db
     ports:
-      - "27017:27017"
+      - "${MONGO_PORT:-27017}:27017"
 
   backend:
     build: ./backend
     restart: always
-    env_file:
-      - ./backend/.env
+    environment:
+      NODE_ENV: ${NODE_ENV:-production}
+      # example: DB_URI injected from secrets in Portainer
+      MONGO_URI: ${MONGO_URI:-mongodb://${MONGO_INITDB_ROOT_USERNAME:-root}:${MONGO_INITDB_ROOT_PASSWORD:-mongo01}@mongo:${MONGO_PORT:-27017}/${MONGO_INITDB_DATABASE:-testdb}}
+      MICROSOFT_CLIENT_ID: ${MICROSOFT_CLIENT_ID}
+      MICROSOFT_CLIENT_SECRET: ${MICROSOFT_CLIENT_SECRET}
+      MICROSOFT_TENANT_ID: ${MICROSOFT_TENANT_ID:-common}
+      MICROSOFT_REDIRECT_URI: ${MICROSOFT_REDIRECT_URI}
+      JWT_SECRET: ${JWT_SECRET}
+      FRONTEND_URL: ${FRONTEND_URL}
     depends_on:
       - mongo
     ports:
-      - "5000:5000"
+      - "${BACKEND_PORT:-5000}:5000"
 
   frontend:
     build: ./frontend
     restart: always
+    environment:
+      NODE_ENV: ${NODE_ENV:-production}
+      VITE_API_URL: ${VITE_API_URL:-http://localhost:5000/}
+      PORT: ${FRONTEND_PORT:-3000}
     ports:
-      - "3000:80"
+      - "${FRONTEND_PORT:-3000}:80"
 
 volumes:
   mongo_data:
