fixing oauth on hosted deploy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,9 +35,10 @@ services:
     build: ./frontend
     restart: always
     environment:
-      NODE_ENV: ${NODE_ENV:-production}
-      VITE_API_URL: ${VITE_API_URL:-http://localhost:5000/}
       PORT: ${FRONTEND_PORT:-3000}
+      NODE_ENV: ${NODE_ENV:-production}
+    args:
+      VITE_API_URL: ${VITE_API_URL:-http://localhost:5000/}
     ports:
       - "${FRONTEND_PORT:-3000}:80"
 
