--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.18.2",
     "passport": "^0.7.0",
     "passport-microsoft": "^2.1.0",
+    "validator": "^13.15.15",
     "winston": "^3.18.1"
   },
   "devDependencies": {
@@ -31,6 +32,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.5.2",
     "@types/passport": "^1.0.17",
+    "@types/validator": "^13.15.3",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
