--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,17 +1,15 @@
 {
   "compilerOptions": {
-    "module": "NodeNext",
+    "module": "ESNext",
     "moduleResolution": "NodeNext",
     "target": "ES2022",
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "strict": true,
+    "isolatedModules": true,
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
     "skipLibCheck": true,
-    "declaration": true,
-    "sourceMap": true,
-    "verbatimModuleSyntax": false
+    "rootDir": "./src",
+    "outDir": "./dist"
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "tests/**/*"]
 }
