--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "build": "vite build",
     "build:app": "vite build --mode app",
     "preview": "vite preview",
-    "test": "echo \"No tests specified\" && exit 0"
+    "test": "npx vitest run"
   },
   "dependencies": {
     "@capacitor/android": "^7.4.3",
@@ -32,12 +32,16 @@
   },
   "devDependencies": {
     "@capacitor/cli": "^7.4.3",
+    "@types/jsdom": "^27.0.0",
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.21",
+    "jsdom": "^27.0.0",
     "postcss": "^8.5.6",
     "sass-embedded": "^1.93.2",
     "tailwindcss": "^4.1.13",
     "vite": "^7.0.6",
-    "vite-plugin-vue-devtools": "^8.0.0"
+    "vite-plugin-vue-devtools": "^8.0.0",
+    "vitest": "^3.2.4"
   }
 }
